network/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
    - protocol: TCP
      port: 5432
      nodePort: 31000
  selector:
    app: postgres
  type: NodePort
  # type: ClusterIP
