network/redmine-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  ports:
    - protocol: TCP
      port: 3000
      nodePort: 30008
  selector:
    app: redmine
  # type: ClusterIP
  type: NodePort
