network/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-redmine.local
      http:
        paths:
          - path: /myredmine
            pathType: Prefix
            backend:
              service:
                name: redmine
                port: 
                  number: 3000
